# victoria-cli

./: README.md
vlogcli/: Cargo.toml  README.md
vlogcli/config/: proj_config.toml  status_config.toml
vlogcli/src/: error.rs  executor.rs  logger.rs  main.rs  proj_config.rs
vlogcli/src/command/: address.rs  export.rs  import.rs  mod.rs  status.rs
vlogcli/src/reqwest/: detection.rs
vlogcli/src/utils/: byte_utils.rs  mod.rs  tar_utils.rs  time_utils.rs
vmcli/: Cargo.toml  README.md
vmcli/config/: interface.txt  proj_config.toml  status_config.toml
vmcli/src/: error.rs  executor.rs  logger.rs  main.rs  proj_config.rs
vmcli/src/command/: address.rs  export.rs  import.rs  status.rs
vmcli/src/utils/: byte_utils.rs  tar_utils.rs  time_utils.rs
