[package]
name = "vlogcli"
version = "1.2.2"
edition = "2024"

[dependencies]
clap = {version = "4.5", features = ["derive"]}
tokio = {version = "1.47", features = ["full"]}
futures-util = "0.3.31"
chrono = {version = "0.4.41", features = ["serde"]}
thiserror = "2.0"
toml = "0.9.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
url = "2.5.4"
flexi_logger = "0.31"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
indicatif = "0.18.0"
blake3 = "1.8.2"

async-compression = {version = "0.4.27", features = ["tokio", "gzip"]}
tokio-tar = "0.3.1"

[dev-dependencies]
tempfile = "3.20"